name: task-chop
version: 0.1.0.0
-- synopsis:            
-- description:         
license: AllRightsReserved
author: Ozgur Akgun
maintainer: ozgurakgun@gmail.com
-- copyright:           
-- category:            
build-type: Simple
-- extra-source-files:  
cabal-version: >=1.10

executable chop
    main-is: Main.hs
    other-modules: Types, UI, IO, Pretty, CalcNext
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base
                 , aeson
                 , aeson-pretty
                 , bytestring
                 , cmdargs
                 , directory
                 , filepath
                 , mtl
                 , pretty
                 , syb
                 , text
                 , time
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -rtsopts
